fix/minor bugfix on models
